<resources>
    <string name="app_name">GSM Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_add">New</string>
    <string name="cat_one">Gateway Controls</string>
    <string name="cat_two">Alert Notifications</string>
    <string name="cat_three">System Settings</string>
    <string name="title_sys_edit">System Editor</string>
    <string name="title_sys_sel">Select A System</string>
    <string name="title_inquiry">Current Settings</string>
    <string name="title_alarm">Security</string>
    <string name="title_convo">Callback</string>
    <string name="title_lang">System Language</string>
    <string name="title_call">Calling\nNumbers</string>
    <string name="title_sms">SMS\nNumbers</string>
    <string name="title_delete_rfid_num">Delete RFID</string>
    <string name="title_speeddial">Speed Dial Numbers</string>
    <string name="title_zone_names">Zones</string>
    <string name="title_rfid_tag">RFID Tag Names</string>
    <string name="title_delays">Activation Delay</string>
    <string name="title_vol">Siren Volume</string>
    <string name="title_siren">Siren Ringtime</string>
    <string name="msg_inquiry">Send system status inquiry via SMS?</string>
    <string name="msg_callback">Request a callback from the gateway via SMS?</string>
    <string name="msg_del_rfid">Delete RFID via SMS?</string>
    <string name="msg_set_call">Set call notification numbers via SMS?</string>
    <string name="msg_set_sms">Set SMS notification numbers via SMS?</string>
    <string name="msg_set_tags">Update tags via SMS?</string>
    <string name="msg_set_speeddial">Set Speed Dial via SMS?</string>
    <string name="msg_set_arm">Arm the system via SMS?</string>
    <string name="msg_set_parm">Partial Arm the system via SMS?</string>
    <string name="msg_set_disarm">Disarm the system via SMS?</string>
    <string name="msg_lang_english">Set English as the system language?</string>
    <string name="msg_lang_espanol">Set Spanish as the system language?</string>
    <string name="msg_lang_tw">Set Traditional Chinese as the system language?</string>
    <string name="msg_lang_cn">Set Simplied Chinese as the system language?</string>
    <string name="msg_vol_mute">Mute alarm?</string>
    <string name="msg_vol_low">Set alarm volume to low?</string>
    <string name="msg_vol_high">Set alarm volume to high?</string>
    <string name="host_only">Settings in this section can only be modified by the host.</string>
    <string name="icon_rfid">Tags</string>
    <string name="icon_siren">Siren</string>
    <string name="icon_speeddial">Speed Dial</string>
    <string name="icon_notification">Alerts</string>
    <string name="icon_lang">Language</string>
    <string name="icon_delay">Delays</string>
    <string name="icon_status">Status</string>

    <string name="zone">Zone</string>
    <string name="zone_names">Zone Names</string>
    <string name="tag">Tag</string>
    <string name="select">Select</string>
    <string name="system_arm">Arm</string>
    <string name="system_parm">Partial Arm</string>
    <string name="system_disarm">Disarm</string>
    <string name="siren_low">Normal</string>
    <string name="siren_high">Loud</string>
    <string name="siren_mute">Mute</string>
    <string name="sys_edit">Edit</string>
    <string name="sys_delete">Delete</string>
    <string name="sys_reset">Reset</string>
    <string name="sys_save">Save</string>

    <string name="hint_tag">Add RFID Tag</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_number">Enter phone number</string>
    <string name="next">Next</string>
    <string name="empty_name">Name cannot be left blank!</string>
    <string name="empty_num">Number cannot be left blank!</string>
    <string name="time_unit_m">Minutes</string>
    <string name="time_unit_s">Seconds</string>
    <string name="msg_confirm_sms">Send SMS to update new settings?</string>
    <string name="msg_reset_tag">Reset this tag?</string>
    <string name="msg_reset_number">Reset this number?</string>

    <string name="default_call">Call Notification %1$d</string>
    <string name="default_sms">SMS Notification %1$d</string>
    <string name="default_speed">Speed Dial %1$d</string>
    <string name="default_tag">Tag %1$d</string>
    <string name="default_zone">Zone %1$d</string>

    <string name="dialog_camera">Take a picture</string>
    <string name="dialog_gallery">Choose from gallery</string>
    <string name="dialog_siren_time">Update siren duration</string>
    <string name="dialog_siren_vol">Update siren volume</string>
    <string name="dialog_siren_all">Update all</string>

    <string name="hint_zone">Enter zone name</string>
    <string name="tags_hint">Edit tags:</string>
    <string name="hint_phone">Add phone number</string>

    <string name="about_label">About LuxHome</string>
    <string name="about">Copyright \u00A9 2015\n\nEverspring\n\nAll rights reserved</string>
</resources>
