<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_backgroundlight">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/whiteish">
        <TextView
            android:id="@+id/tv_ringvol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/title_vol"/>
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:checkedButton="@+id/radio0"
            android:layout_below="@id/tv_ringvol"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/siren_high" />
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/siren_low" />
            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/siren_mute" />
        </RadioGroup>
        <TextView
            android:id="@+id/tv_ringtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup1"
            android:layout_margin="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/title_siren"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/tv_ringtime"
            android:orientation="horizontal">
            <NumberPicker
                android:id="@+id/np_ringtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:solidColor="#00ffffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:text="@string/time_unit_m"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/selector_buttons"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@android:string/ok"/>
    </RelativeLayout>
</RelativeLayout>