<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_backgroundlight">
    <Button
        android:id="@+id/btn_parm"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:drawableStart="@drawable/icon_parm"
        android:drawableLeft="@drawable/icon_parm"
        android:background="@drawable/selector_buttons"
        android:gravity="center_vertical|start"
        android:textAlignment="textStart"
        android:text="@string/system_parm"/>
    <Button
        android:id="@+id/btn_arm"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_above="@id/btn_parm"
        android:layout_centerHorizontal="true"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:drawableStart="@drawable/icon_arm"
        android:drawableLeft="@drawable/icon_arm"
        android:background="@drawable/selector_buttons"
        android:gravity="center_vertical|start"
        android:textAlignment="textStart"
        android:text="@string/system_arm"/>
    <Button
        android:id="@+id/btn_disarm"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_below="@id/btn_parm"
        android:layout_centerHorizontal="true"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:drawableStart="@drawable/icon_disarm"
        android:drawableLeft="@drawable/icon_disarm"
        android:background="@drawable/selector_buttons"
        android:gravity="center_vertical|start"
        android:textAlignment="textStart"
        android:text="@string/system_disarm"/>
</RelativeLayout>