<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/icon_backgroundlight">
    <View
        android:id="@+id/horizontal_separater"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:layout_margin="3dp"/>
    <View
        android:id="@+id/vertical_separater"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:id="@+id/btn_disarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/selector_button_public">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:clickable="false"
            android:src="@drawable/icon_disarm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAllCaps="true"
            android:text="@string/system_disarm"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_arm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/vertical_separater"
        android:layout_toStartOf="@id/vertical_separater"
        android:layout_above="@id/btn_disarm"
        android:layout_alignStart="@id/btn_disarm"
        android:layout_alignLeft="@id/btn_disarm"
        android:drawableTop="@drawable/icon_arm"
        android:drawablePadding="6dp"
        android:padding="12dp"
        android:background="@drawable/selector_button_public"
        android:text="@string/system_arm"/>
    <Button
        android:id="@+id/btn_parm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/vertical_separater"
        android:layout_toEndOf="@id/vertical_separater"
        android:layout_above="@id/btn_disarm"
        android:layout_alignRight="@id/btn_disarm"
        android:layout_alignEnd="@id/btn_disarm"
        android:drawableTop="@drawable/icon_parm"
        android:drawablePadding="6dp"
        android:padding="12dp"
        android:background="@drawable/selector_button_public"
        android:text="@string/system_parm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_disarm"
        android:layout_alignLeft="@id/btn_disarm"
        android:layout_alignStart="@id/btn_disarm"
        android:layout_alignRight="@id/btn_disarm"
        android:layout_alignEnd="@id/btn_disarm"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_current"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_currentsettings"
            android:drawablePadding="6dp"
            android:padding="12dp"
            android:background="@drawable/selector_buttons"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/icon_status"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_systemalarm"
            android:drawablePadding="6dp"
            android:padding="12dp"
            android:background="@drawable/selector_buttons"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/action_settings"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/btn_callback"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_twowaytalk"
            android:drawablePadding="6dp"
            android:padding="12dp"
            android:background="@drawable/selector_buttons"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/title_convo"/>
    </LinearLayout>

</RelativeLayout>