<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_backgroundlight">
    <LinearLayout
        android:id="@+id/signin_dialogbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner">
        <EditText android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:padding="16dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:hint="@string/hint_name"/>
        <EditText android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:padding="16dp"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/hint_number"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_margin="16dp"
            android:background="@drawable/selector_buttons"
            android:text="@string/sys_save"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/anchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_dialogbox"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_commentanchor"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:src="@drawable/icon_signuplogo"/>
</RelativeLayout>